# crashreport-rs

./: Cargo.toml  README.md
examples/: crash.rs
src/: lib.rs  panic_handler.rs
src/repository/: mod.rs  provider.rs  validate.rs
