[package]
name = "crashreport"
version = "0.1.0"
authors = ["Evan Pratten <ewpratten@gmail.com>"]
edition = "2021"
description = "Automatic GitHub crash reporting system for any Rust crate"
documentation = "https://docs.rs/crashreport"
readme = "README.md"
homepage = "https://github.com/ewpratten/crashreport-rs"
repository = "https://github.com/ewpratten/crashreport-rs"
license = "GPL-3.0"
keywords = []
categories = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
colored = "2.0.0"
supports-hyperlinks = "^1.2.0"
terminal-link = "0.1.0"
url = "2.2.2"
urlencoding = "2.1.0"
backtrace = "0.3.64"

[features]
default = ["color"]
color = []

# Provider assumptions
assume_github = []
assume_gitlab = []